--- a/src/components/Contato.module.css
+++ b/src/components/Contato.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  margin-bottom: 20px;
   gap: 12px;
   width: 50%;
   font-size: 22;
